retrieveUnpackaged/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Credifamilia</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Asignado</fullName>
        </values>
        <values>
            <fullName>Descartado</fullName>
        </values>
        <values>
            <fullName>Nuevo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Verificando</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>A_qu_hora_desea_ser_contactado__c</fullName>
        <label>A qué hora desea ser contactado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>08:00 am - 09:00 am</fullName>
                </value>
                <value>
                    <fullName>09:00 am - 12:00 am</fullName>
                </value>
                <value>
                    <fullName>12:00 pm - 02:00 pm</fullName>
                </value>
                <value>
                    <fullName>02:00 pm - 05:00 pm</fullName>
                </value>
                <value>
                    <fullName>05:00 pm - 06:00 pm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Antiguedad_del_inmueble__c</fullName>
        <label>Antigüedad del inmueble</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Antiguedad_en_la_actividad__c</fullName>
        <label>Antigüedad en la actividad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Antiguedad_en_la_vivienda_actual_en_a_o__c</fullName>
        <label>Antigüedad en la vivienda actual en año</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_construida__c</fullName>
        <label>Área construida</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asignado1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check cuando un candidato es asignado a un asesor.</description>
        <label>Asignado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asignado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check cuando un candidato es asignado a un asesor.</description>
        <label>Asignado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autoriza_consulta_centrales_y_Politicas__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Autorización consulta centrales y Políticas uso de su información</description>
        <label>Autoriza consulta centrales y Políticas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calificacion__c</fullName>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prioridad alta</fullName>
                </value>
                <value>
                    <fullName>Prioridad media</fullName>
                </value>
                <value>
                    <fullName>Prioridad baja</fullName>
                </value>
                <value>
                    <fullName>No prevalidado</fullName>
                </value>
                <value>
                    <fullName>Enviar correo</fullName>
                </value>
                <value>
                    <fullName>Indagar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campa_a__c</fullName>
        <label>Campaña</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canal_digital__c</fullName>
        <label>Canal digital</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cargo_actual__c</fullName>
        <label>Cargo actual</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Celular_Asesor_Global__c</fullName>
        <description>Celular del asesor de Global Seguros</description>
        <label>Celular Asesor Global</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ciudad_Laboral_Actividad_Economica_c__c</fullName>
        <label>Ciudad</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_de_residencia__c</fullName>
        <label>Ciudad de residencia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bogotá</fullName>
                </value>
                <value>
                    <fullName>Medellín</fullName>
                </value>
                <value>
                    <fullName>Cali</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Bucaramanga</fullName>
                </value>
                <value>
                    <fullName>Pereira</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ciudad_del_proyecto__c</fullName>
        <label>Ciudad del proyecto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_referencia_familiar__c</fullName>
        <label>Ciudad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_referencia_personal__c</fullName>
        <label>Ciudad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codeudores__c</fullName>
        <label>Codeudores</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_del_asesor__c</fullName>
        <description>Código del asesor de global seguros</description>
        <label>Código del asesor</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comentarios_generales__c</fullName>
        <label>Comentarios generales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Concepto_del_candidato__c</fullName>
        <label>Resultado del Prevalidador</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No prevalidado</fullName>
                </value>
                <value>
                    <fullName>VIABLE</fullName>
                </value>
                <value>
                    <fullName>NO VIABLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consultas_realizadas__c</fullName>
        <label>Consultas realizadas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conteo__c</fullName>
        <label>Conteo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detalle__c</fullName>
        <label>Detalle</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No contactado</fullName>
                </value>
                <value>
                    <fullName>Por problemas personales</fullName>
                </value>
                <value>
                    <fullName>No interesado en el crédito</fullName>
                </value>
                <value>
                    <fullName>Por endeudamiento financiero vs ingreso</fullName>
                </value>
                <value>
                    <fullName>Prestador de servicios y no es profesional</fullName>
                </value>
                <value>
                    <fullName>Por monto insuficiente</fullName>
                </value>
                <value>
                    <fullName>Por tasas de interés</fullName>
                </value>
                <value>
                    <fullName>Garantía del inmueble no viable</fullName>
                </value>
                <value>
                    <fullName>Por edad</fullName>
                </value>
                <value>
                    <fullName>Por asesor</fullName>
                </value>
                <value>
                    <fullName>Score Interno</fullName>
                </value>
                <value>
                    <fullName>Por endeudamiento financiero y capacidad de Pago</fullName>
                </value>
                <value>
                    <fullName>Cédula extranjería</fullName>
                </value>
                <value>
                    <fullName>Información inválida</fullName>
                </value>
                <value>
                    <fullName>Puntaje data</fullName>
                </value>
                <value>
                    <fullName>A solicitud del cliente</fullName>
                </value>
                <value>
                    <fullName>Sin cobertura</fullName>
                </value>
                <value>
                    <fullName>Por antigüedad laboral</fullName>
                </value>
                <value>
                    <fullName>Paz y salvo menor a un año</fullName>
                </value>
                <value>
                    <fullName>Pendiente entrega documentación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deudas_financieras_mensuales__c</fullName>
        <label>Deudas financieras mensuales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$30.000-$100.000</fullName>
                </value>
                <value>
                    <fullName>$100.000-$300.000</fullName>
                </value>
                <value>
                    <fullName>$300.000-$500.000</fullName>
                </value>
                <value>
                    <fullName>$500.000-$800.000</fullName>
                </value>
                <value>
                    <fullName>$800.000-$1.000.000</fullName>
                </value>
                <value>
                    <fullName>$1.000.000-En adelante</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direccion_de_la_empresa__c</fullName>
        <label>Dirección de la empresa</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_referencia_familiar__c</fullName>
        <label>Dirección</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_referencia_personal__c</fullName>
        <label>Dirección</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_residencia__c</fullName>
        <label>Dirección residencia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edad__c</fullName>
        <formula>FLOOR((TODAY() -  Fecha_de_nacimiento__c  )/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_asesor_global__c</fullName>
        <description>Correo electrónico asesor global</description>
        <inlineHelpText>Correo electrónico asesor global</inlineHelpText>
        <label>Email asesor global</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Endeudamiento_financiero__c</fullName>
        <label>Endeudamiento financiero</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estado_civil__c</fullName>
        <label>Estado civil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soltero</fullName>
                </value>
                <value>
                    <fullName>Casado</fullName>
                </value>
                <value>
                    <fullName>Unión libre</fullName>
                </value>
                <value>
                    <fullName>Divorciado</fullName>
                </value>
                <value>
                    <fullName>Separado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_de_candidato_1__c</fullName>
        <label>Estado de candidato</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estado_del_candidato_1__c</fullName>
        <label>Estado del candidato</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estado_en_linea__c</fullName>
        <label>Estado en linea</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estrato__c</fullName>
        <label>Estrato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension_del_propietario__c</fullName>
        <formula>Owner:User.Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extensión del propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Familiar_Nombre_y_Apellido__c</fullName>
        <label>Familiar - Nombre y Apellido</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_asignacion__c</fullName>
        <label>Fecha asignación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_consulta_centrales__c</fullName>
        <label>Fecha consulta centrales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_creacion__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check de verificación cuando un candidato es creado</description>
        <label>Fecha de creación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fecha_de_expedicion_cc__c</fullName>
        <label>Fecha de expedición cc</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_ingreso_del_empleo_actual__c</fullName>
        <label>Fecha de ingreso del empleo actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_nacimiento__c</fullName>
        <label>Fecha de nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_ingreso_candidato__c</fullName>
        <label>Fecha ingreso candidato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formula_asignacion__c</fullName>
        <formula>MOD(  Conteo__c   , 3 ) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula asignación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fosyga__c</fullName>
        <label>Fosyga</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Grupo__c</fullName>
        <label>Grupo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingresos_mensuales_familiares__c</fullName>
        <label>Ingresos mensuales familiares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lugar_de_expedicion__c</fullName>
        <label>Lugar de expedición</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lugar_de_nacimiento__c</fullName>
        <label>Lugar de nacimiento</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monto_maximo_a_aprobar__c</fullName>
        <label>Monto máximo a aprobar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monto_solicitado__c</fullName>
        <label>Monto solicitado</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Movil_del_propietario__c</fullName>
        <formula>Owner:User.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Móvil del propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_mero_de_personas_a_cargo__c</fullName>
        <label>Número de personas a cargo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>N_mero_de_vivienda__c</fullName>
        <label>Número de vivienda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel_de_educacion__c</fullName>
        <label>Nivel de educación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primaria</fullName>
                </value>
                <value>
                    <fullName>Secundaria</fullName>
                </value>
                <value>
                    <fullName>Universitario</fullName>
                </value>
                <value>
                    <fullName>Técnica</fullName>
                </value>
                <value>
                    <fullName>Postgrado</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_Asesor_Global__c</fullName>
        <description>Nombre del asesor de Global Seguros</description>
        <label>Nombre Asesor Global</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_constructora__c</fullName>
        <label>Nombre constructora</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_del_proyecto__c</fullName>
        <label>Nombre del proyecto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_entidad_empleadora_o_negocio__c</fullName>
        <label>Nombre entidad empleadora o negocio</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_asignacion__c</fullName>
        <label>Número de asignación</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_candidato__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Número de candidato</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Numero_de_celular__c</fullName>
        <label>Número de celular</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_identificacion__c</fullName>
        <label>Número de documento</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Numero_del_candidato__c</fullName>
        <description>Identificador utilizado para la asignación automática de candidatos.</description>
        <displayFormat>{0}</displayFormat>
        <label>Número del candidato</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Observaciones_estado_consulta__c</fullName>
        <label>Observaciones estado consulta</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_prevalidador__c</fullName>
        <label>Observaciones prevalidador</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Origen__c</fullName>
        <label>Origen</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origen_real__c</fullName>
        <label>Origen real</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Otro_telefono_de_contacto__c</fullName>
        <label>Otro teléfono de contacto</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parentesco__c</fullName>
        <label>Parentesco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mamá</fullName>
                </value>
                <value>
                    <fullName>Papá</fullName>
                </value>
                <value>
                    <fullName>Hijo(a)</fullName>
                </value>
                <value>
                    <fullName>Hermano(a)</fullName>
                </value>
                <value>
                    <fullName>Tío(a)</fullName>
                </value>
                <value>
                    <fullName>Sobrino(a)</fullName>
                </value>
                <value>
                    <fullName>Primo (a)</fullName>
                </value>
                <value>
                    <fullName>Suegro(a)</fullName>
                </value>
                <value>
                    <fullName>Nieto(a)</fullName>
                </value>
                <value>
                    <fullName>Cuñado(a)</fullName>
                </value>
                <value>
                    <fullName>Yerno</fullName>
                </value>
                <value>
                    <fullName>Nuera</fullName>
                </value>
                <value>
                    <fullName>Abuelo (a)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Nombre_y_Apellido__c</fullName>
        <label>Personal - Nombre y Apellido</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plazo__c</fullName>
        <description>Número de meses para pagar un crédito</description>
        <label>Plazo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Porcentaje_de_financiaci_n__c</fullName>
        <label>Porcentaje de financiación</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Precio_de_la_vivienda__c</fullName>
        <label>Precio de la vivienda</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profesion_o_Actividad__c</fullName>
        <label>Profesión o Actividad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propietario_candidato__c</fullName>
        <formula>Owner:User.FirstName &amp;&quot; &quot;&amp;  Owner:User.MiddleName &amp;&quot; &quot;&amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario candidato</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Puntaje_data_credito__c</fullName>
        <label>Puntaje data crédito</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quienes_se_presentan_al_cr_dito__c</fullName>
        <label>Quienes se presentan al crédito</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Me voy a presentar solo(a)</fullName>
                </value>
                <value>
                    <fullName>Me voy a presentar con un familiar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relacion__c</fullName>
        <label>Relación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amigo(a)</fullName>
                </value>
                <value>
                    <fullName>Compañero (a) de trabajo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salario_Base_titular_es_del_Cr_dito__c</fullName>
        <label>Salario Base titular(es) del Crédito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sector_del_proyecto__c</fullName>
        <label>Sector del proyecto</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sexo__c</fullName>
        <label>Sexo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Femenino</fullName>
                </value>
                <value>
                    <fullName>Masculino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tasa_actual__c</fullName>
        <label>Tasa actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Telefono_Actividad_economica__c</fullName>
        <label>Teléfono</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_referencia_familiar__c</fullName>
        <label>Teléfono</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_referencia_personal__c</fullName>
        <label>Teléfono</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiempo_de_experiencia_en_anos__c</fullName>
        <label>Tiempo de experiencia en años</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tiene_hipotecas_nuevas__c</fullName>
        <label>Tiene hipotecas nuevas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_amortizacion__c</fullName>
        <label>Tipo de amortización</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uvr</fullName>
                </value>
                <value>
                    <fullName>Pesos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_contrato__c</fullName>
        <label>Tipo de contrato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Término indefinido</fullName>
                </value>
                <value>
                    <fullName>Término fijo</fullName>
                </value>
                <value>
                    <fullName>Prestación de servicios</fullName>
                </value>
                <value>
                    <fullName>Pensionado</fullName>
                </value>
                <value>
                    <fullName>Independiente</fullName>
                </value>
                <value>
                    <fullName>Cooperativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_documento__c</fullName>
        <label>Tipo de documento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cédula ciudadanía</fullName>
                    <default>true</default>
                    <label>Cédula ciudadanía</label>
                </value>
                <value>
                    <fullName>Cédula de extranjería</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_ocupacion__c</fullName>
        <label>Tipo de ocupación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empleado</fullName>
                </value>
                <value>
                    <fullName>Independiente</fullName>
                </value>
                <value>
                    <fullName>Pensionado</fullName>
                </value>
                <value>
                    <fullName>Rentista de capital</fullName>
                </value>
                <value>
                    <fullName>Empleado con negocio</fullName>
                </value>
                <value>
                    <fullName>Ama de casa</fullName>
                </value>
                <value>
                    <fullName>Prestador de servicios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_poliza__c</fullName>
        <description>Tipo de poliza</description>
        <label>Tipo de póliza</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>U. Garantizada platino</fullName>
                </value>
                <value>
                    <fullName>U. Garantizada</fullName>
                </value>
                <value>
                    <fullName>Global Semestres</fullName>
                </value>
                <value>
                    <fullName>U. Segura completo</fullName>
                </value>
                <value>
                    <fullName>U. Segura semestres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>